# interview-cheat-sheet

./: Brewfile  README.md  Taskfile  docker-compose.yaml  duckdb_notebook.ipynb  main.py  pyproject.toml
extract_play/: connectorx_playground.py  pandas_playground.py  polars_playground.py  pyarrow_playground.py  pyproject.toml
extract_play/tests/: conftest.py  test_connectorx_playground.py  test_pandas_playground.py  test_polars_playground.py  test_pyarrow_playground.py
extract_play/tests/data/: generic_rfc4180.csv
load_play/: pyproject.toml
