[project]
name = "interview-cheat-sheet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connectorx>=0.4.4",
    "duckdb-engine>=0.17.0",
    "jupysql>=0.11.1",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
    "testcontainers>=4.12.0",
]

[tool.uv.workspace]
members = [
    "extract_play",
    "load_play",
]

# makes uv.workspace pytests easy
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
